# mqtt-llm

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  code-quality.yml  docker-build.yml  test.yml
src/mqtt_llm/: __init__.py  bridge.py  cli.py  config.py  main.py  mqtt_client.py  ollama_client.py  openai_client.py
tests/: __init__.py  test_chunking.py  test_config.py  test_env_config.py
